tests/specs/run/config_imports/missing_unstable/ext.out
error: Expected a JavaScript or TypeScript module, but identified a Unknown module. Importing these types of modules is currently not supported.
  Specifier: file:///[WILDLINE]/config.yaml
    at file:///[WILDLINE]/ext.ts:1:18
