tests/specs/run/config_imports/missing_unstable/ext.ts
import yaml from "./config.yaml";
console.log(yaml);
